# feed-me

./: .gitignore  README.md  config.example.yaml  pyproject.toml  run_nommer.sh  setup.sh
src/: __init__.py  feed_fetcher.py  llm_filter.py  logger.py  main.py  models.py  notifier.py  post_store.py
