[project]
name = "nommer"
version = "0.1.0"
description = "Personal interest-aware feed listener with LLM-based relevance filtering"
requires-python = ">=3.10"
dependencies = [
    "feedparser>=6.0.10",
    "openai>=1.6.1",
    "pyyaml>=6.0.1",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.8.0",
]

[project.scripts]
nommer = "src.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

